[gd_scene load_steps=4 format=2]

[ext_resource path="res://resources/powerups/PowerUp.gd" type="Script" id=1]
[ext_resource path="res://resources/powerups/powerUps.png" type="Texture" id=2]

[sub_resource type="CircleShape2D" id=1]
radius = 25.5221

[node name="PowerUp" type="RigidBody2D"]
collision_layer = 48
collision_mask = 2147483696
mass = 0.01
gravity_scale = 0.0
contacts_reported = 1
contact_monitor = true
can_sleep = false
script = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="IncreaseFiringSpeed" type="Sprite" parent="."]
scale = Vector2( 0.4, 0.4 )
texture = ExtResource( 2 )
region_enabled = true
region_rect = Rect2( 245, 15, 135, 170 )
region_filter_clip = true

[node name="IncreaseFirePower" type="Sprite" parent="."]
scale = Vector2( 0.35, 0.35 )
texture = ExtResource( 2 )
region_enabled = true
region_rect = Rect2( 25, 10, 175, 170 )
region_filter_clip = true
[connection signal="body_entered" from="." to="." method="_on_PowerUp_body_entered"]
